# django-mosaic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  todo.md
blog/: admin.py  feeds.py  models.py  urls.py  views.py
blog/management/commands/: import.py
blog/migrations/: 0001_initial.py  0001_initial_squashed_0008_alter_tag_name_alter_tag_unique_together.py  0002_remove_post_category_alter_post_options_and_more.py  0009_alter_post_published_at.py
blog/templates/: base.html  home.html  post-detail-include.html  post-detail.html  post-list.html
mosaic/: admin.py  feeds.py  models.py  urls.py  views.py
mosaic/management/commands/: import.py
mosaic/migrations/: 0001_initial_squashed_0008_alter_tag_name_alter_tag_unique_together.py  0009_alter_post_published_at.py  0010_alter_post_published_at_alter_post_slug_and_more.py
mosaic/templates/: about.html  home.html  post-detail.html
mosaic/tests/: post-2-advanced-techniques.md
src/django_mosaic/: admin.py  apps.py  feeds.py  models.py  urls.py  views.py
src/django_mosaic/conf/deployment/: .dockerignore  .env.template  Dockerfile  backup.sh  docker-entrypoint.sh  mosaic-app.service  mosaic-backup.service  mosaic-backup.timer  nginx.conf
src/django_mosaic/conf/init/: .env.local  settings.py
src/django_mosaic/conf/init/templates/: about.html
src/django_mosaic/management/commands/: _deployment.py  config_manager.py  deployment.py  import.py  mosaic.py
src/django_mosaic/migrations/: 0001_initial.py  0011_remove_post_is_draft_post_is_published_and_more.py  0016_alter_contentimage_image_alter_contentimage_thumb.py
src/django_mosaic/static/css/: style.css
src/django_mosaic/templates/: base.html  post-detail-include.html  post-detail.html
src/mosaic/: admin.py  feeds.py  models.py  urls.py  views.py
src/mosaic/migrations/: 0012_author_post_author.py  0013_add_author_to_post.py  0014_contentimage.py  0015_contentimage_post.py
src/mosaic/templates/: base.html  home.html  post-detail.html  tag-detail.html
src/mosaic/tests/: post-1-introduction-to-lorem.md
static/css/: style.css
static/feed/: style.xslt
tests/: settings.py
user-templates/: hcard.html
website/: settings.py  urls.py
(+1 files in other folders)
