[project]
name = "mosaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-magic-authorization>=0.1.1",
    "markdown>=3.10",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "markdown>=3.10",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
