[project]
name = "django-mosaic"
version = "0.1.2"
description = "A simple django blogging engine for the indieweb"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "j23n", email = "oss@j23n.com" },
]
license = {file = "LICENSE"}
keywords = [
    "django",
    "blog",
    "indieweb"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bleach>=6.3.0",
    "django>=5.2.11",
    "django-magic-authorization>=0.1.5",
    "django-markdownify>=0.9.6",
    "fabric>=3.2.2",
    "pillow>=12.1.0",
]

[project.urls]
Homepage = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:zVdCS3rdBtnLLui7jaHTf4X9j6FD"
Repository = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:zVdCS3rdBtnLLui7jaHTf4X9j6FD"
"Bug Tracker" = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:zVdCS3rdBtnLLui7jaHTf4X9j6FD/issues"
Changelog = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:zVdCS3rdBtnLLui7jaHTf4X9j6FD/tree/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
